--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -370,13 +370,13 @@
        "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pattern = '[A-Z][a-z]+'\n",
+    "pattern = '([A-Z]+[a-z]+)'\n",
     "re.findall(pattern, text)"
    ]
   },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,24 +425,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Roosevelt says to Lincoln, I will bet you $50 I can get the bartender to give me a free drink. Lincoln says, I am in!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#print(re.sub('\\\"', '', text)) ---- replacing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -456,6 +448,28 @@
    "source": [
     "pattern = '\\\"'\n",
     "print(re.findall(pattern, text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I will bet you $50 I can get the bartender to give me a free drink.',\n",
+       " 'I am in!']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '(?:\"(.*?)\")' \n",
+    "re.findall(pattern, text)"
    ]
   },
   {
@@ -504,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -525,13 +539,13 @@
        "['876-93-2289', '098-32-5295']"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pattern = '\\d{3}\\-\\d{1,2}\\-\\w{4}'\n",
+    "pattern = '\\d{3}\\-\\d{2}\\-\\d{4}'\n",
     "re.findall(pattern, text) "
    ]
   },
@@ -544,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -553,13 +567,13 @@
        "['(847)789-0984', '(987)222-0901']"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pattern = '\\D\\d{3}\\D*\\d{3}\\D*\\w{4}'\n",
+    "pattern = '\\W\\d{3}\\W\\d{3}\\W\\d{4}'\n",
     "re.findall(pattern, text) "
    ]
   },
@@ -572,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -581,13 +595,13 @@
        "[' 876-93-2289', '(847)789-0984', ' 098-32-5295', '(987)222-0901']"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pattern = '\\D\\d{3}\\D*\\d{1,3}\\D*\\w{4}'\n",
+    "pattern = '\\W\\d{3}\\W\\d{1,3}\\W\\d{4}'\n",
     "re.findall(pattern, text)"
    ]
   },
